# disktidy

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml  release.yml
docs/: BUILD-LOG.md
src/disktidy/: __init__.py  analyze.py  caches.py  cli.py  consumers.py  docker_reclaim.py  render.py  util.py
tests/: test_smoke.py
