[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disktidy"
version = "0.2.0"
description = "Analyze disk usage and safely reclaim space from Docker and package-manager caches."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "SYS-02" }]
keywords = ["disk", "storage", "cleanup", "docker", "cache", "wsl", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
disktidy = "disktidy.cli:main"

[project.urls]
Homepage = "https://github.com/harish-ai-engineer/disktidy"
Source = "https://github.com/harish-ai-engineer/disktidy"
Issues = "https://github.com/harish-ai-engineer/disktidy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/disktidy"]
